[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cedarscript-parser"
version = "0.1.0"
description = "A parser for CEDARScript, a domain-specific language for code editing and refactoring tasks"
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["parser", "ast", "cedarscript", "code-editing"]
dependencies = [
    "tree-sitter",
    # Add any other dependencies your project needs
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/yourusername/cedarscript-parser"
